--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container" style="margin-top: 90px;">
     <div class="row align-self-center justify-content-center xlight-montserrat">
-      <h2 style="font-size: 42pt;">Create Your Account</h2>
+      <h2>Create Your Account</h2>
     </div>
     <div class="row justify-content-center">
       <form style="width: 570px; margin-top: 40px">
@@ -88,7 +88,7 @@
           </button>
         </div>
         <div class="row py-2 m-0 justify-content-around">
-          <button type="submit" class="btn btn-facebook lato d-flex justify-content-around align-items-center" style="width: 275px"> 
+          <button type="submit" class="btn btn-facebook lato d-flex justify-content-around align-items-center" style="width: 275px; height: 42px;"> 
             <img src="../images/Facebook Logo.png"> 
             <span> Sign up with Facebook </span>
           </button>
