--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -22,15 +22,15 @@
     <div class="col search-logo">
       <img src="../images/cinch(black).png" alt="Cinch Logo">
     </div>
-    <div class="col search-membership-buttons" style="font-family:'Monserrat' 'sans-serif'; font-weight: 200;">
+    <div class="col" style="font-family:'Monserrat' 'sans-serif'; font-weight: 200;">
       <form class="form-inline">
         <div class="col">
-          <button class="btn btn-light nav-link border rounded-0 text-uppercase" style="width: 144px;">
+          <button class="btn search-membership-buttons light-montserrat nav-link border rounded-0 text-uppercase" style="width: 144px;">
             Join
           </button>
         </div>
         <div class="col">
-          <button class="btn nav-link border-0 rounded-0 text-uppercase">
+          <button class="btn nav-link search-membership-buttons border-0 rounded-0 light-montserrat text-uppercase">
             Login
           </button>
         </div>
@@ -65,50 +65,50 @@
             <input type="date" class="form-control detail-search-input" id="inputZip">
           </div>
           <div class="col-3 pt-3">
-            <button class="btn btn-cinch text-uppercase rounded py-3" style="width: 370px;">Search</button>
+            <button class="light-montserrat btn btn-cinch text-uppercase rounded py-3" style="width: 370px;">Search</button>
           </div>
         </div>
       </form>
     </div>
-    <div class="row align-items-center text-center border px-5 py-3" style="width: 1300px !important;">
-      <div class="col-2 m-0 w-120" style="width: 156px !important;">
+    <div class="row align-items-center text-center border px-5 py-4" style="width: 1300px !important;">
+      <div class="col-1 m-0 w-120" style="width: 156px !important;">
         <div class="row m-0">
           <img src="../images/Arsenal_FC.svg.png">
         </div>
         <div class="row py-2">
-          <span class="text-uppercase">ARSENAL FC</span>
+          <span class="text-uppercase light-monserrat text-nowrap" style="font-size: 14pt;">ARSENAL FC</span>
         </div>
       </div>
-      <div class="col-3 align-items-center">
+      <div class="col-3 px-0 align-items-center">
         <div class="row justify-content-center text-uppercase" style="font-size: 20pt;">
-          <p>Soccer Camp</p>
+          <p class="m-0">Soccer Camp</p>
         </div>
-        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 18pt;">
-          <p>July 20-24 9am-3pm </p>
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 14pt;">
+          <p class="m-0">July 20-24 9am-3pm </p>
         </div>
-        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 18pt;">
-          <p>Ages 5-14 </p>
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 14pt;">
+          <p class="m-0">Ages 5-14 </p>
         </div>
-        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 18pt;">
-          <p>@ Mirasol Park </p>
-        </div>
-      </div>
-      <div class="col-4" style="height: 120px; width: 268px">
-        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
-          <p>Arsenal FC offers players a </p>
-        </div>
-        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
-          <p>unique look into how to train the </p>
-        </div>
-        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
-          <p>Arsenal Way.</p>
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 14pt;">
+          <p class="m-0">@ Mirasol Park </p>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col-4 m-0 p-0" style="height: 120px; width: 268px">
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
+          <p class="m-0">Arsenal FC offers players a </p>
+        </div>
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
+          <p class="m-0">unique look into how to train the </p>
+        </div>
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
+          <p class="m-0">Arsenal Way.</p>
+        </div>
+      </div>
+      <div class="col-2 light-montserrat" style="font-size: 20pt;">
         $599
       </div>
       <div class="col-2 px-1">
-        <button class="btn btn-cinch text-uppercase rounded py-3" style="width: 232px;">
+        <button class="btn btn-cinch text-uppercase rounded py-3 light-montserrat" style="width: 232px;">
           Select
         </button>
       </div>
@@ -119,28 +119,28 @@
       <div class="col mx-5">
         <div class="list-group">
           <span class="list-group-item border-0 light-montserrat text-uppercase">Cinch Sports </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Developers</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">About Cinch</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Blog</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Store</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Developers</a>
         </div>
       </div>
       <div class="col">
         <div class="list-group">
           <span class="list-group-item border-0 light-montserrat text-uppercase">Help </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Forums</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Help Center</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Video School</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">FAQ</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Forums</a>
         </div>
       </div>
       <div class="col">
         <div class="list-group">
           <span class="list-group-item border-0 light-montserrat text-uppercase">More</span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Cinch Sportswear</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Partners</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Affiliate Program</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Donate</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Cinch Sportswear</a>
         </div>
       </div>
       <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
@@ -165,10 +165,10 @@
           <div class="row">
             <div class="col my-4">
               <label for="subscribe" class="pb-3 light-montserrat text-uppercase">Subscribe</label>
-              <div class="input-group">
-                <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
-                <span class="input-group-btn">
-                  <button type="submit" class="btn btn-dark rounded-0 light-montserrat text-uppercase">SIGN UP</button>
+              <div class="input-group" style="width: 492px; height: 50px;">
+                <input type="email" class="form-control footer-input rounded-0" id="subscribe" placeholder="Enter Your Email">
+                <span class="input-group-btn" style="width: 50%;">
+                  <button type="submit" class="btn btn-cinch rounded-0" style="width: 100%;">SIGN UP</button>
                 </span>
               </div>
             </div>
