--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -25,8 +25,8 @@
         </div>
       </div>
       <form class="form-inline col">
-        <button class="btn btn-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase">Join</button>
-        <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase">login</button>
+        <button class="btn btn-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase" style="height: 40px; width: 144px;">Join</button>
+        <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase" style="height: 40px; width: 144px;">login</button>
       </form>
     </nav>
     <div class="container justify-content-center text-center" style="margin-top: 90px">
@@ -66,28 +66,28 @@
       <div class="col mx-5">
         <div class="list-group">
           <span class="list-group-item border-0 text-uppercase light-montserrat">Cinch Sports </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Developers</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">About Cinch</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Blog</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Store</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Developers</a>
         </div>
       </div>
       <div class="col">
         <div class="list-group">
           <span class="list-group-item border-0 text-uppercase light-montserrat">Help </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Forums</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Help Center</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Video School</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">FAQ</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Forums</a>
         </div>
       </div>
       <div class="col">
         <div class="list-group">
           <span class="list-group-item border-0 text-uppercase light-montserrat">More </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Cinch Sportswear</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Partners</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Affiliate Program</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Donate</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Cinch Sportswear</a>
         </div>
       </div>
       <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
@@ -111,11 +111,11 @@
         <form class="row">
           <div class="row">
             <div class="col my-4">
-              <label for="subscribe" class="pb-3 text-uppercase light-montserrat">Subscribe</label>
-              <div class="input-group">
-                <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
-                <span class="input-group-btn">
-                  <button type="submit" class="btn btn-dark rounded-0 light-montserrat">SIGN UP</button>
+              <label for="subscribe" class="pb-3 light-montserrat text-uppercase">Subscribe</label>
+              <div class="input-group" style="width: 492px; height: 50px;">
+                <input type="email" class="form-control footer-input rounded-0" id="subscribe" placeholder="Enter Your Email">
+                <span class="input-group-btn" style="width: 50%;">
+                  <button type="submit" class="btn btn-cinch rounded-0" style="width: 100%;">SIGN UP</button>
                 </span>
               </div>
             </div>
