fixed up finer detailed issues

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -11,37 +11,37 @@
 
 <body>
   <div class="container text-center">
-    <h2 class="login-header-text my-5 xlight-montserrat" style="font-size: 42pt;">Login</h2>
-    <div class="card login-container mx-auto mb-2 py-3">
-      <div class="card-body login-form-box py-4">
+    <h2 class="login-header-text" style="font-size: 42pt; margin: 78px;">Login</h2>
+    <div class="card login-container mx-auto mb-2" style="border-radius: 10px; padding: 48px 50px; width: 470px; height: 667px;">
+      <div class="card-body login-form-box py-4 px-0" style="padding: 0px 50px; width: 370px; height: 553px;">
         <img src="../images/bitmap.png" class="login-header-image" alt="Cinch Logo">
-        <span class="px-3"> + </span>
-        <img src="../images/Arsenal_FC.svg.png" class="login-header-image" alt="Arsenal Logo">
+        <span class="px-5"> + </span>
+        <img src="../images/Arsenal_FC.svg.png" class="login-header-image" alt="Arsenal Logo" style="width: 94px; height: 110px;">
         <form>
-          <div class="row justify-content-center my-2">
-            <div class="form-group col-md-12 text-left">
+          <div class="row justify-content-center mb-2" style="margin-top: 60px;">
+            <div class="form-group col-md-12 text-left" style="width: 370px !important;">
               <label for="login-email" class="text-uppercase light-montserrat">E-Mail</label>
-              <input type="email" class="login-input-text form-control py-3 light-montserrat" id="login-email" placeholder="Your Email Address">
+              <input type="email" class="login-input-text form-control py-3 light-montserrat" id="login-email" placeholder="Your Email Address" style="width: 370px !important;">
             </div>
           </div>
           <div class="row justify-content-center my-3">
             <div class="form-group col-md-12 text-left">
-              <label for="login-password" class="text-uppercase light-montserrat">Password</label>
-              <input type="password" class="login-input-text form-control py-3 light-montserrat" id="login-password" placeholder="Password">
+              <label for="login-password" class="text-uppercase light-montserrat" style="width: 370px !important;">Password</label>
+              <input type="password" class="login-input-text form-control py-3 light-montserrat" id="login-password" placeholder="Password" style="width: 370px !important;">
             </div>
           </div>
           <div class="col text-center align-items-center">
-            <div class="row justify-content-center">
-              <button type="submit" class="btn btn-cinch btn-block py-3 my-1 text-uppercase light-montserrat" style="font-size: 12pt;">Login</button>
+            <div class="row justify-content-center" style="width: 370px !important;">
+              <button type="submit" class="btn btn-cinch btn-block py-3 my-1 text-uppercase light-montserrat" style="border-radius: 6px; width: 370px !important;">Login</button>
             </div>
-            <div class="row justify-content-center">
-              <button type="submit" class="btn btn-facebook btn-block text-light py-2 my-2 lato"> 
-                <img src="../images/Facebook Logo.png"> Sign in with Facebook
+            <div class="row justify-content-center" style="width: 370px !important;">
+              <button type="submit" class="btn btn-facebook btn-block text-light py-2 my-2 lato d-flex justify-content-center align-items-center" style="width: 370px !important;"> 
+                <img src="../images/Facebook Logo.png" style="margin-right: 50px;"> Sign in with Facebook
               </button>
             </div>
-            <div class="row justify-content-center mb-4">
-              <button type="submit" class="btn btn-google btn-block mt-2 mb-5 btn-outline-light py-2 text-dark roboto"> 
-                <img src="../images/logo_googleg_48dp.png"> Sign in with Google
+            <div class="row justify-content-center mb-4" style="width: 370px !important;">
+              <button type="submit" class="btn btn-google btn-block mt-2 mb-5 btn-outline-light py-2 text-dark roboto d-flex justify-content-center align-items-center" style="width: 370px !important;"> 
+                <img src="../images/logo_googleg_48dp.png" style="margin-right: 50px;"> Sign in with Google
               </button>
             </div>
           </div>
