--- a/public/pages/search-results.htm
+++ b/public/pages/search-results.htm
@@ -38,58 +38,58 @@
       </nav>
     </div>
   </div>
-  <div class="container-fluid" style="margin: 22px 230px; width: 1162px; height: 1275px;">
+  <div class="container-fluid" style="margin: 22px 217px; width: 1162px; height: 1275px;">
     <div class="row" style="margin-bottom: 44px;">
       <form style="width: 1162px;">
         <div class="form-row align-items-center px-auto mx-auto">
-          <div class="form-group col-auto ml-0 pl-0 mr-3" style="width: 185px !important; margin:0 30px;">
+          <div class="form-group col-auto ml-0 pl-0 mr-3" style="width: 180px !important; margin:0 30px;">
             <label for="inputSport" class="text-uppercase" style="font-size: 10pt;">Sport</label>
-            <select id="inputSport" class="form-control detail-search-input">
+            <select id="inputSport" class="detail-search-input form-control">
                 <option selected>Soccer</option>
                 <option>...</option>
               </select>
           </div>
-          <div class="form-group col-auto px-0" style="width: 185px !important; margin:0 15px;">
+          <div class="form-group col-auto px-0" style="width: 180px !important; margin:0 20px;">
             <label for="inputType" class="text-uppercase" style="font-size: 10pt; ">Type</label>
-            <select id="inputType" class="form-control detail-search-input">
+            <select id="inputType" class="detail-search-input form-control">
               <option selected>Camps</option>
               <option>...</option>
             </select>
           </div>
-          <div class="form-group col-auto px-0" style="width: 185px !important; margin:0 15px;">
+          <div class="form-group col-auto px-0" style="width: 180px !important; margin:0 20px;">
             <label for="inputCity" class="text-uppercase" style="font-size: 10pt; ">Location</label>
             <input type="text" class="form-control detail-search-input" id="inputCity">
           </div>
-          <div class="form-group col-auto px-0" style="width: 185px !important; margin:0 15px;">
+          <div class="form-group col-auto px-0" style="width: 180px !important; margin:0 20px;">
             <label for="inputZip" class="text-uppercase" style="font-size: 10pt; ">Start Date</label>
             <input type="date" class="form-control detail-search-input" id="inputZip">
           </div>
-          <div class="col-3 pt-3" style="margin:14px 0px 20px 15px;">
-            <button class="light-montserrat btn btn-cinch text-uppercase py-3" style="width: 230px; border-radius: 2px;">Search</button>
+          <div class="col-3 pt-3" style="margin:14px 5px 0px;">
+            <button class="light-montserrat btn btn-cinch text-uppercase rounded py-3" style="width: 200px;">Search</button>
           </div>
         </div>
       </form>
     </div>
-    <div class="row align-items-center text-center border" style="width: 1300px !important; padding: 35px 10px 35px 40px;">
+    <div class="row align-items-center text-center border" style="width: 1300px !important; padding: 35px 40px;">
       <div class="col-1" style="width: 156px !important; margin-top:5px;">
         <div class="row m-0">
           <img src="../images/Arsenal_FC.svg.png">
         </div>
         <div class="row py-2">
-          <span class="text-uppercase light-montserrat text-nowrap" style="font-size: 12pt; letter-spacing: 1.6px;">ARSENAL FC</span>
+          <span class="text-uppercase light-monserrat text-nowrap" style="font-size: 12pt; letter-spacing: 1.6px;">ARSENAL FC</span>
         </div>
       </div>
       <div class="col-3 align-items-center" style="margin-left: 45px;">
         <div class="row justify-content-center text-uppercase" style="font-size: 18pt; letter-spacing: 2pt;">
           <p class="m-0">Soccer Camp</p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px; font-weight: 300;">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px;">
           <p class="m-0">July 20-24 9am-3pm </p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px; font-weight: 300;">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px;">
           <p class="m-0">Ages 5-14 </p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px; font-weight: 300;">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 12pt; margin-top: 5px;">
           <p class="m-0">@ Mirasol Park </p>
         </div>
       </div>
@@ -104,11 +104,11 @@
           <p class="m-0">the Arsenal Way.</p>
         </div>
       </div>
-      <div class="col-1 light-montserrat" style="font-size: 18pt; padding-right: 25px; padding-left: 25px; margin-right: 30px;">
+      <div class="col-1 light-montserrat" style="font-size: 20pt; padding-right: 25px; padding-left: 25px; margin-right: 25px;">
         $599
       </div>
       <div class="col-2 px-0">
-        <button class="btn btn-cinch text-uppercase py-3 light-montserrat" style="width: 232px; border-radius: 3px">
+        <button class="btn btn-cinch text-uppercase rounded py-3 light-montserrat" style="width: 232px;">
           Select
         </button>
       </div>
