homepage, register and login are pixel perfect

--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -13,8 +13,9 @@
 
 <body>
   <div class="container" style="margin-top: 90px;">
-    <div class="row align-self-center justify-content-center xlight-montserrat">
-      <h2>Create Your Account</h2>
+    <div class="row align-self-center justify-content-center light-montserrat">
+      <h2 style="font-size: 34pt; letter-spacing: -0.6pt; font-weight: 300; text-shadow: -1px 0 rgb(150,150,150), 0 1px rgb(150,150,150), 1px 0 rgb(150,150,150), 0 -1px rgb(150,150,150);
+"> <strong>Create Your Account<strong></h2>
     </div>
     <div class="row justify-content-center">
       <form style="width: 570px; margin-top: 40px">
@@ -59,7 +60,7 @@
           </div>
           <div class="form-group col-md-6 pl-3">
             <label class="light-montserrat text-uppercase register-input-label" for="inputState">Country</label>
-            <select id="inputState" class="form-control">
+            <select id="inputState" class="form-control register-input-text" style="height: 50px !important;">
               <option selected>United States</option>
               <option>...</option>
             </select>
@@ -73,7 +74,7 @@
                   <img src="../images/Arrow.png">
                 </div> 
               </div>
-              <div class="col-auto px-0">
+              <div class="light-montserrat col-auto px-0" style="letter-spacing: 0px;">
                  I agree with
                 <a href="#">
                   <u class="text-dark">Terms and Conditions</u>
@@ -87,7 +88,7 @@
             Create my account
           </button>
         </div>
-        <div class="row py-2 m-0 justify-content-around">
+        <div class="row m-0 justify-content-around" style="padding-top: 10px;">
           <button type="submit" class="btn btn-facebook lato d-flex justify-content-around align-items-center" style="width: 275px; height: 42px;"> 
             <img src="../images/Facebook Logo.png"> 
             <span> Sign up with Facebook </span>
