--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -17,19 +17,19 @@
           <img src="../images/cinch(white).png" alt="Cinch Logo">
         </a>
       </div>
-      <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around">
-        <div class="navbar-nav">
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Home</a>
+      <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around" style="padding-left: 0px; margin-right: 30px;">
+        <div class="navbar-nav" style="padding-left: 0px;">
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#" style="margin-left: 0px;">Home</a>
           <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Features</a>
           <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Products</a>
         </div>
       </div>
       <form class="form-inline col">
-        <button class="btn btn-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase" style="height: 40px; width: 144px;">Join</button>
+        <button class="btn btn-light px-5 nav-link border-0 light-montserrat text-uppercase" style="height: 40px; width: 144px; border-radius: 2px;">Join</button>
         <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase" style="height: 40px; width: 144px;">login</button>
       </form>
     </nav>
-    <div class="container justify-content-center text-center" style="margin-top: 90px">
+    <div class="container justify-content-center text-center" style="margin-top: 125px">
       <div class="row">
         <div class="col homepage-tagline"> 
           <h1 class="homepage-tagline text-white">Welcome to</h1>
@@ -41,56 +41,56 @@
         </div> 
       </div>
       <div class="row justify-content-center m-3">
-        <form class="homepage-search-form text-dark">
-          <div class="form-row">
-            <div class="col-6 rounded my-3" style="padding: 0px 1px">
-              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Organization Name">
+        <form class="homepage-search-form text-dark xlight-montserrat" style="width:1000px;">
+          <div class="form-row no-wrap">
+            <div class="col-auto rounded my-3" style="padding: 0px .5px; width: 385px !important;">
+              <input type="text" class="homepage-form-input form-control" placeholder="Organization Name">
             </div>
-            <div class="col-2 rounded my-3" style="padding: 0px 1px">
-              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Select Sport">
+            <div class="col-auto rounded my-3" style="padding: 0px .5px; width: 270px;">
+              <input type="text" class="homepage-form-input form-control" placeholder="Select Sport">
             </div>
-            <div class="col-2 rounded my-3" style="padding: 0px 1px">
-              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Activity Type">
+            <div class="col rounded my-3" style="padding: 0px .5px; width: 170px !important;">
+              <input type="text" class="homepage-form-input form-control" placeholder="Activity Type">
             </div>
-            <div class="col-2 rounded my-3" style="padding: 0px 1px">
-              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="City or Zip">
+            <div class="col rounded my-3 " style="padding: 0px .5px; margin-left: .5px;">
+              <input type="text" class="homepage-form-input form-control" style="width: 150px !important;" placeholder="City or Zip">
             </div>
           </div>
-          <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase xlight-montserrat homepage-search-btn" type="submit">Search</button>
+          <button class="submit btn my-4 text-uppercase xlight-montserrat homepage-search-btn" style="border-radius: 2px; margin-right: 25px; font-size: 10pt;" type="submit">Search</button>
         </form>
       </div>
     </div>
   </div>
   <div class="footer m-5 p-2 containter-fluid">
-    <div class="row mx-5 justify-content-around">
-      <div class="col mx-5">
-        <div class="list-group">
-          <span class="list-group-item border-0 text-uppercase light-montserrat">Cinch Sports </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">About Cinch</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Blog</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Store</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Developers</a>
+    <div class="row justify-content-around" style="margin-left: 110px;">
+      <div class="col-auto pr-5" style="width: 190px !important;">
+        <div class="list-group" style="width: 190px !important;">
+          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Cinch Sports </span>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">About Cinch</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Blog</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Store</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Developers</a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-auto pl-4 pr-5">
         <div class="list-group">
-          <span class="list-group-item border-0 text-uppercase light-montserrat">Help </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Help Center</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Video School</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">FAQ</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Forums</a>
+          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Help </span>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Help Center</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Video School</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">FAQ</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Forums</a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-auto pr-5">
         <div class="list-group">
-          <span class="list-group-item border-0 text-uppercase light-montserrat">More </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Partners</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Affiliate Program</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Donate</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Cinch Sportswear</a>
+          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">More </span>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Partners</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Affiliate Program</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Donate</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Cinch Sportswear</a>
         </div>
       </div>
-      <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
+      <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start" style="margin-left: 220px;">
         <div class="row pb-3 text-uppercase light-montserrat">
           follow us
         </div>
@@ -114,8 +114,8 @@
               <label for="subscribe" class="pb-3 light-montserrat text-uppercase">Subscribe</label>
               <div class="input-group" style="width: 492px; height: 50px;">
                 <input type="email" class="form-control footer-input rounded-0" id="subscribe" placeholder="Enter Your Email">
-                <span class="input-group-btn" style="width: 50%;">
-                  <button type="submit" class="btn btn-cinch rounded-0" style="width: 100%;">SIGN UP</button>
+                <span class="input-group-btn" style="width: 48%;">
+                  <button type="submit" class="btn btn-cinch light-montserrat" style="width: 100%; border-radius: 2px; letter-spacing: 1.2px; font-size: 10pt;">SIGN UP</button>
                 </span>
               </div>
             </div>
