--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -145,36 +145,36 @@
     </div>
   </div>
   <div class="footer m-5 p-2 containter-fluid">
-    <div class="row mx-5 justify-content-around">
-      <div class="col mx-5">
-        <div class="list-group">
-          <span class="list-group-item border-0 light-montserrat text-uppercase">Cinch Sports </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">About Cinch</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Blog</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Cinch Store</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Developers</a>
+    <div class="row justify-content-around" style="margin-left: 110px;">
+      <div class="col-auto pr-5" style="width: 190px !important;">
+        <div class="list-group" style="width: 190px !important;">
+          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Cinch Sports </span>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">About Cinch</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Blog</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Cinch Store</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Developers</a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-auto pl-4 pr-5">
         <div class="list-group">
-          <span class="list-group-item border-0 light-montserrat text-uppercase">Help </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Help Center</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Video School</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">FAQ</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1 xlight-montserrat">Forums</a>
+          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">Help </span>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Help Center</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Video School</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">FAQ</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 py-2 xlight-montserrat">Forums</a>
         </div>
       </div>
-      <div class="col">
+      <div class="col-auto pr-5">
         <div class="list-group">
-          <span class="list-group-item border-0 light-montserrat text-uppercase">More </span>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Partners</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Affiliate Program</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Donate</a>
-          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1 xlight-montserrat">Cinch Sportswear</a>
+          <span style="font-size: 9pt" class="list-group-item border-0 text-uppercase light-montserrat">More </span>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Partners</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Affiliate Program</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Donate</a>
+          <a href="#" style="font-size: 11pt" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-2 xlight-montserrat">Cinch Sportswear</a>
         </div>
       </div>
-      <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
-        <div class="row pb-3  light-montserrat text-uppercase">
+      <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start" style="margin-left: 220px;">
+        <div class="row pb-3 text-uppercase light-montserrat">
           follow us
         </div>
         <div class="d-flex footer-images justify-content-md-start row">
@@ -197,8 +197,8 @@
               <label for="subscribe" class="pb-3 light-montserrat text-uppercase">Subscribe</label>
               <div class="input-group" style="width: 492px; height: 50px;">
                 <input type="email" class="form-control footer-input rounded-0" id="subscribe" placeholder="Enter Your Email">
-                <span class="input-group-btn" style="width: 50%;">
-                  <button type="submit" class="btn btn-cinch rounded-0" style="width: 100%;">SIGN UP</button>
+                <span class="input-group-btn" style="width: 48%;">
+                  <button type="submit" class="btn btn-cinch light-montserrat" style="width: 100%; border-radius: 2px; letter-spacing: 1.2px; font-size: 10pt;">SIGN UP</button>
                 </span>
               </div>
             </div>
