--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -14,13 +14,13 @@
 <body>
   <div class="container-fluid">
     <div class="detail-nav search-nav row border align-items-center">
-      <div class="col">
+      <div class="col" style="margin-left: 215px; padding-left: 0px;">
         <nav class="navbar navbar-light border-0">
-          <button class="navbar-toggler" type="button" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler border-0" type="button" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
       </div>
-      <div class="col-5"></div>
+      <div class="col"></div>
       <div class="col search-membership-buttons-container mr-5">
         <form class="form-inline">
           <div class="col">
@@ -38,102 +38,104 @@
       </div>
     </div>
   </div>
-  <div class="detail-container" style="width: 1182px !important; max-width: 1182 !important;">
-    <div class="row">
+  <div class="detail-container" style="width: 1182px !important; max-width: 1182 !important; margin-left: 245px;">
+    <div class="row" style="margin-bottom: 30px">
       <form style:"width: 1162px;">
         <div class="form-row align-items-center px-auto mx-auto">
-          <div class="form-group col-auto mr-3" style="width: 170px; margin-left: 10px;">
+          <div class="form-group col-auto px-0" style="width: 170px; margin-left: 15px; margin-right: 25px;">
             <label class="light-montserrat text-uppercase" for="inputSport">Sport</label>
-            <select id="inputSport" class="detail-search-input form-control">
-              <option selected>Soccer</option>
+            <select id="inputSport" class="detail-search-input light-montserrat form-control" style="letter-spacing: 0pt; border-radius: 2px !important;">
+              <option class="light-montserrat" selected>Soccer</option>
               <option>...</option>
             </select>
           </div>
-          <div class="form-group col-auto mx-3" style="width: 170px;">
+          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 25px;">
             <label class="light-montserrat text-uppercase" for="inputType">Type</label>
-            <select id="inputType" class="detail-search-input form-control">
+            <select id="inputType" class="detail-search-input form-control light-montserrat" style="letter-spacing: 0pt; border-radius: 2px !important;">
             <option selected>Camps</option>
             <option>...</option>
           </select>
           </div>
-          <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label class="light-montserrat text-uppercase" for="inputCity">Location</label>
-            <input type="text" class="form-control detail-search-input" id="inputCity">
+          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 25px;">
+            <label class="light-montserrat text-uppercase" for="inputZip" placeholder="95124">Location</label>
+            <input type="text" class="form-control detail-search-input light-montserrat" style="letter-spacing: 0pt; border-radius: 2px;" id="inputZip">
           </div>
-          <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label class="light-montserrat text-uppercase" for="inputZip">Start Date</label>
-            <input type="date" class="form-control detail-search-input" id="inputZip">
+          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 25px;">
+            <label class="light-montserrat text-uppercase" for="inputDate">Start Date</label>
+            <input type="date" class="form-control text-uppercase detail-search-input light-montserrat" style="letter-spacing: 0pt; border-radius: 2px;" id="inputDate">
           </div>
-          <div class="col-3 pt-3">
-            <button class="btn btn-cinch rounded py-3 text-uppercase" style="width: 370px;">Search</button>
+          <div class="col-3" style="padding-top: 15px;">
+            <button class="btn btn-cinch rounded text-uppercase light-montserrat" style="width: 390px; letter-spacing: 1.2pt; padding: 15px 0px; border-radius: 2px !important;">Search</button>
           </div>
         </div>
       </form>
     </div>
     <div class="row">
       <div class="container col">
-        <div class="card mb-3 detail-program-detail">
+        <div class="card mb-3 detail-program-detail" style="width: 755px; border-radius: 0px;">
           <div class="card-body text-center">
-            <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
-            <p class="card-title">Arsenal FC</p>
-            <p class="card-text">July 20-24 9am-3pm</p>
-            <p class="card-text">Ages 5-14</p>
-            <p class="card-text">@ Mirasol Park</p>
-            <p class="card-text">Through our exclusive partnership with Arsenal, our Elite Soccer camps give players unique and privileged access to some
+            <img src="../images/Arsenal_FC.svg.png" style="margin-top: 15px;" alt="Arsenal">
+            <p class="card-title light-montserrat text-uppercase pt-4">Arsenal FC</p>
+            <p class="card-text text-uppercase pb-0 mb-0 pt-4 light-montserrat" style="font-size: 16pt; letter-spacing: .5pt; font-weight: 600">arsenal soccer schools</p>
+            <p class="card-text text-uppercase pb-4 light-montserrat" style="font-size: 16pt; letter-spacing: .5pt; font-weight: 600">palm beach, fl - day camp </p>
+            <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .5pt; font-size: 10pt; padding: 0px 40px;">July 20-24 9am-3pm</p>
+            <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .5pt; font-size: 10pt; padding: 0px 40px;">Ages 5-14</p>
+            <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .5pt; font-size: 10pt; padding: 0px 40px;">@ Mirasol Park</p>
+            <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .1pt; font-size: 13pt; padding: 20px 15px;">Through our exclusive partnership with Arsenal, our Elite Soccer camps give players unique and privileged access to some
             of the best coaches and coaching methods in the modern game. Players will improve their technical ability through
             tried and trusted drills, exercises and scrimmages based on the same philosophy used by the clubs themselves, all
             under the watchful eye of official Arsenal soccer coaches.</p>
-            <p class="card-text">The camps can accommodate all skill levels and players are grouped together based on ability in order to improve tactical,
+            <p class="card-text xlight-montserrat" style="margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .1pt; font-size: 13pt; padding: 20px 15px;">The camps can accommodate all skill levels and players are grouped together based on ability in order to improve tactical,
             technical and physical ability. Together with players from all over the US and around the world players hone their
             skills in a fun and supportive environment for a rewarding experience for all. Kick off your summer with us and
             go home a better player!</p>
-            <p class="card-text"> $599</p>
-            <button class="btn btn-cinch radius-0 light-montserrat text-uppercase" style="width: 232px;"> Register</button>
+            <p class="card-text light-montserrat" style="font-size: 16pt; padding-bottom: 20px;"> $599</p>
+            <button class="btn btn-cinch radius-0 light-montserrat text-uppercase" style=" color: rgb(200,200,200); font-weight: 100; width: 232px; padding: 15px 0px; border-radius: 2px;"> Register</button>
           </div>
         </div>
       </div>
       <div class="col detail-location-group">
-        <ul class="list-group ">
-          <li class="list-group-item mb-3" style="width: 370px;">
-            <div class="row align-items-center">
-              <div class="col">
-                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
+        <ul class="list-group">
+          <li class="list-group-item mb-3" style="width: 390px; border-radius: 2px;">
+            <div class="row align-items-center" >
+              <div class="col-auto" style="margin-right: 30px; width: 80px;">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 75px;">
               </div>
               <div class="col-8">
-                <div class="row xlight-montserrat text-muted" style="font-size: 18pt;">
+                <div class="row xlight-montserrat text-muted" style="font-size: 14pt;">
                   Winter ID Camp
                 </div>
-                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 12pt;">
+                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 9pt;">
                   Jan 24-28 @ Stub hub center
                 </div>
               </div>
             </div>
           </li>
-          <li class="list-group-item my-3 justify-content-center" style="width: 370px;">
-            <div class="row align-items-center">
-              <div class="col">
-                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
+          <li class="list-group-item my-3 justify-content-center" style="width: 390px; border-radius: 2px;">
+            <div class="row align-items-center" >
+              <div class="col-auto" style="margin-right: 30px; width: 80px;">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 75px;">
               </div>
               <div class="col-8">
-                <div class="row xlight-montserrat text-muted" style="font-size: 18pt;">
+                <div class="row xlight-montserrat text-muted" style="font-size: 14pt;">
                   Miami Beach ID Camp
                 </div>
-                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 12pt;">
+                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 9pt;">
                   JUN 16-18 @ miami beach
                 </div>
               </div>
             </div>
           </li>
-          <li class="list-group-item my-3" style="width: 370px;">
-            <div class="row align-items-center">
-              <div class="col">
-                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
+          <li class="list-group-item my-3" style="width: 390px; border-radius: 2px;">
+            <div class="row align-items-center" >
+              <div class="col-auto" style="margin-right: 30px; width: 80px;">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 75px;">
               </div>
               <div class="col-8">
-                <div class="row xlight-montserrat text-muted" style="font-size: 18pt;">
+                <div class="row xlight-montserrat text-muted" style="font-size: 14pt;">
                   California ID Camp
                 </div>
-                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 12pt;">
+                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 9pt;">
                   may 15-19 @ SDSU
                 </div>
               </div>
