polished search results

--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -23,13 +23,13 @@
       <div class="col"></div>
       <div class="col search-membership-buttons-container mr-5">
         <form class="form-inline">
-          <div class="col">
-            <button class="btn border nav-link px-3 rounded-0 search-membership-buttons text-uppercase">
+          <div class="col-auto px-0">
+            <button class="btn border nav-link px-3 rounded-0 search-membership-buttons light-montserrat text-uppercase">
               Join
             </button>
           </div>
-          <div class="col">
-            <button class="btn nav-link border-0 rounded-0 search-membership-buttons text-uppercase">
+          <div class="col-auto px-0">
+            <button class="btn nav-link border-0 rounded-0 search-membership-buttons light-montserrat text-uppercase">
               Login
             </button>
           </div>
